# pdbpy

./: LICENSE  README.md  demo.py  msf.py  pyproject.toml  requirements.txt  simple.py
.github/workflows/: python-package.yml  python-publish-pypi.yml  python-publish-testpypi.yml
example_pdbs/: .gitignore  addr.cpp  build.cmd  minimal.cpp  windows.cpp  windows.ilk  windows_pdb_cvdump.txt  windows_pdb_llvm-pdbutil_dump.txt  windows_pdb_llvm-pdbutil_dump.yml  windows_pdb_llvm-pdbutil_pretty.txt
pdbpy/: msf.py  parsing.py  pdb.py  primitivetypes.py  types.py
pdbpy/codeview/: __init__.py  leafid.py  symbols.py  types.py
pdbpy/codeview/records/symbols/: __init__.py  base.py  datasym.py
pdbpy/pe/: records.py
pdbpy/streams/: pdbinfo.py  typing.py
pdbpy/streams/dbistream/: dbistream.py
pdbpy/streams/debuginformationstream/: dbidbgheader.py  dbistreamheader.py  debuginformationstream.py  moduleinformation.py  sectionmap.py
pdbpy/streams/directorystream/: __init__.py  streamdirectory.py
pdbpy/streams/pdbtype/: __init__.py
pdbpy/streams/pdbtype/records/: __init__.py  asd.py  base.py  enum.py  (+6 more)
pdbpy/streams/sectionheaderstream/: __init__.py  sectionheaderstream.py
pdbpy/streams/symbolsstream/: __init__.py  symbolsstream.py
pdbpy/streams/typestream/: __init__.py  leaf_enum.py  parse.py  pdbtypestream.py  typestreamheader.py
pdbpy/utils/: ctypes.py  hash.py  memorywrapper.py  range_keys.py
streams/: pdbinfo.py  streamdirectory.py
streams/pdbtype/: __init__.py  leaf_enum.py
tests/: test_memory_wrapper.py  test_windows_pdb.py
utils/: ctypes.py  hash.py
(+22 files in other folders)
